Exercise1_07/manifests/server103-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server103-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server103
  template:
    metadata:
      labels:
        app: server103
    spec:
      containers:
        - name: server103
          image: vuolahti/server103:ten
