Exercise1_07/manifests/server103-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: server103-svc
spec:
  type: ClusterIP
  selector:
    app: server103 # This is the app as declared in the Deployment
  ports:
    - port: 2345 # This is a port that is available to the cluster
      protocol: TCP
      targetPort: 80 # This is the target port
